// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file-manager-test-onFolderButtonClicked-authorized 1`] = `
MockViewModelRepositoryState {
  "activeEditorLine": null,
  "activeSegmentIndex": -1,
  "captchaBypassToken": undefined,
  "cloneRequestState": "unknown",
  "codeCheckRequest": "unknown",
  "compileErrorResult": {
    "errors": [],
  },
  "compileSuccessResult": {
    "segments": [],
  },
  "currentEmail": null,
  "currentProgram": {
    "parameters": {
      "roundStrategy": "noRound",
    },
    "segments": [],
  },
  "currentView": "closed",
  "editModeForFilename": false,
  "editModeForProjectTitle": false,
  "editorNavigationTarget": null,
  "email": "a@gmail.com",
  "emailRequest": "unknown",
  "expandProblemViewer": false,
  "files": [
    {
      "autogenerated": false,
      "fileName": "myfile.txt",
      "url": "https://files.labkeeper.io/project/348484/user/43444/myfile.txt",
    },
  ],
  "filesToDelete": [],
  "getFilesRequestState": "ok",
  "getProjectRequestState": "unknown",
  "getProjectsRequestState": "ok",
  "id": 111,
  "instructionExpanded": false,
  "isAuthenticated": true,
  "isAutocompleteLoading": false,
  "isFileDraggedToManager": false,
  "isRegistration": false,
  "language": "ru",
  "lastOpenedProjectUuid": undefined,
  "lastProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [],
  },
  "lastVerifiedCode": null,
  "location": "/project/2cd18704-6c3f-48cb-96f1-9a923930f8cb",
  "loginRequest": "unknown",
  "mode": "markdown",
  "passwordSetRequest": "unknown",
  "pdfClickPosition": null,
  "pdfNavigationTarget": null,
  "pdfUpdated": 0,
  "pendingSegmentEditorCursor": null,
  "previousActiveSegmentIndex": -1,
  "project": {
    "isPublic": false,
    "lastModified": "2025-09-08T12:15:38.514Z",
    "program": {
      "parameters": {
        "roundStrategy": "noRound",
      },
      "segments": [],
    },
    "projectId": "2cd18704-6c3f-48cb-96f1-9a923930f8cb",
    "projectType": "markdown",
    "title": "biba project",
    "userId": 111,
  },
  "projectIsReadonly": false,
  "projectPromptRequestState": "unknown",
  "projects": [
    {
      "isPublic": false,
      "lastModified": "2025-09-08T12:15:38.514Z",
      "projectId": "2cd18704-6c3f-48cb-96f1-9a923930f8cb",
      "title": "biba project",
      "userId": 111,
    },
  ],
  "redoEnabled": false,
  "saveProjectRequestState": "unknown",
  "search": undefined,
  "showFileManager": true,
  "showProjectPromptModal": false,
  "showSearch": false,
  "showShareModal": false,
  "showTour": false,
  "synctexEditorPosition": null,
  "toasts": [],
  "tokens": 0,
  "undoEnabled": false,
}
`;

exports[`file-manager-test-onFolderButtonClicked-unauthorized-on-default 1`] = `
MockViewModelRepositoryState {
  "activeEditorLine": null,
  "activeSegmentIndex": -1,
  "captchaBypassToken": undefined,
  "cloneRequestState": "unknown",
  "codeCheckRequest": "unknown",
  "compileErrorResult": undefined,
  "compileSuccessResult": {
    "segments": [],
  },
  "currentEmail": null,
  "currentProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [],
  },
  "currentView": "login",
  "editModeForFilename": false,
  "editModeForProjectTitle": false,
  "editorNavigationTarget": null,
  "email": "",
  "emailRequest": "unknown",
  "expandProblemViewer": false,
  "files": [],
  "filesToDelete": [],
  "getFilesRequestState": "unknown",
  "getProjectRequestState": "unknown",
  "getProjectsRequestState": "unknown",
  "id": 0,
  "instructionExpanded": false,
  "isAuthenticated": false,
  "isAutocompleteLoading": false,
  "isFileDraggedToManager": false,
  "isRegistration": false,
  "language": "ru",
  "lastOpenedProjectUuid": undefined,
  "lastProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [],
  },
  "lastVerifiedCode": null,
  "location": "/project/default",
  "loginRequest": "unknown",
  "mode": "markdown",
  "passwordSetRequest": "unknown",
  "pdfClickPosition": null,
  "pdfNavigationTarget": null,
  "pdfUpdated": 0,
  "pendingSegmentEditorCursor": null,
  "previousActiveSegmentIndex": -1,
  "project": undefined,
  "projectIsReadonly": false,
  "projectPromptRequestState": "unknown",
  "projects": [],
  "redoEnabled": false,
  "saveProjectRequestState": "unknown",
  "search": undefined,
  "showFileManager": false,
  "showProjectPromptModal": false,
  "showSearch": false,
  "showShareModal": false,
  "showTour": false,
  "synctexEditorPosition": null,
  "toasts": [],
  "tokens": 0,
  "undoEnabled": false,
}
`;
